<resources>
    <string name="app_name">NanumAED</string>
    <string name="ble_not_supported">You need to turn on Bluetooth to run it</string>
    <string name="connected">connected</string>
    <string name="disconnected">disconnected</string>
    <string name="no_data">no_data</string>
    <string name="unknown_service">unknown_service</string>
    <string name="unknown_characteristic">unknown_characteristic</string>
    <string name="title_devices">title_devices</string>
    <string name="error_bluetooth_not_supported">error_bluetooth_not_supported</string>
    <string name="unknown_device">unknown_device</string>
    <string name="enter_name">Enter name</string>
    <string name="create_report">Create report</string>
    <string name="no_score">-</string>
    <string name="score">Score</string>
    <string name="menu">Menu</string>
    <string name="video_conference">Conference</string>
    <string name="number_of_people">Number Of People</string>
    <string name="out">Out</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="send">Send</string>
    <string name="play_pause">Play/Pause</string>
    <string name="replay">Replay</string>
    <string name="camera">Camera</string>
    <string name="room_name">Room Name</string>
    <string name="connect">Connect</string>
    <string name="search">Search</string>
    <string name="close">Close</string>
    <string name="band01">01 Band : </string>
    <string name="pad01">01 Pad : </string>
    <string name="band02">02 Band : </string>
    <string name="pad02">02 Pad : </string>
    <string name="band03">03 Band : </string>
    <string name="pad03">03 Pad : </string>
    <string name="band04">04 Band : </string>
    <string name="pad04">04 Pad : </string>
    <string name="band05">05 Band : </string>
    <string name="pad05">05 Pad : </string>
    <string name="band06">06 Band : </string>
    <string name="pad06">06 Pad : </string>
    <string name="education">Education</string>
    <string name="game">Game</string>
    <string name="remote_edu">Remote Education</string>
    <string name="compress">Compress</string>
    <string name="count">Count</string>
    <string name="cycle">Cycle</string>
    <string name="nickname">Name(Nickname).</string>
    <string name="calibration">Calibration</string>
    <string name="enter_room">Enter a room name.</string>
    <string name="enter_nickname">Enter a name(nickname).</string>
    <string name="exist_room">The room was already created.</string>
    <string name="exist_name">The name is already used in the room.</string>
    <string name="no_room">The room does not exist</string>
    <string name="enter">Enter</string>
    <string name="cpr_score">CPR Score</string>
    <string name="session_info">Session Info</string>
    <string name="depth_accuracy">Depth Accuracy</string>
    <string name="release_accuracy">Release Accuracy</string>
    <string name="ventilation">Ventilation</string>
    <string name="graph">Graph</string>
    <string name="compressions">Compressions</string>
    <string name="release">Release</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="notification">Notification</string>
    <string name="back_noti">If you go back, the report history is not saved. Would you like to go back?</string>
    <string name="confirm">Confirm</string>
    <string name="setting">Setting</string>
    <string name="name">Name</string>
    <string name="cancel">Cancel</string>
    <string name="done_sentence">Would you like to finish?</string>
    <string name="out_sentence">Would you like to finish the CPR remote education?</string>
    <string name="add">Add</string>
    <string name="conference_sentence">Would you like to reconnect to the ongoing video conference?</string>
    <string name="breath_accuracy_dialog">Accuracy of ventilation.</string>
    <string name="depth_accuracy_dialog">Accuracy of press depth.</string>
    <string name="total_cpr_dialog">Total time of doing CPR.</string>
    <string name="stop_depth_dialog">Time of stop pressing cpr.</string>
    <string name="count_cycle_dialog">Count of cycle.</string>
    <string name="position_accuracy_dialog">Accuracy of position.</string>
    <string name="depth">Depth</string>
    <string name="license">OpenSource License</string>
    <string name="magnet_check">Magnet Check</string>
    <string name="init">Initialize</string>
    <string name="check_magnet">Check the position of a magnet</string>
    <string name="magnet_normal">Magnet position is normal</string>
    <string name="first">1st : Breathe as much as you can.</string>
    <string name="second">2nd : Breathe as much as you can.</string>
    <string name="third">3rd : Breathe as much as you can.</string>
    <string name="complete">Complete.</string>
    <string name="complete_check_magnet">The magnet is identified.</string>
    <string name="magnet_again">Check the magnet position again, then press the arrow.</string>
    <string name="magnet_put">Put the magnet in the right place, then press the arrow.</string>
    <string name="practice">PRACTICE</string>
    <string name="evaluation">EVALUATION</string>
    <string name="time">TIME</string>
    <string name="interval">INTERVAL</string>
    <string name="min">MIN</string>
    <string name="max">MAX</string>
    <string name="depth_average">Depth : </string>
    <string name="rythme">Rythme : </string>
    <string name="accuracy">Accuracy</string>
    <string name="wrist_angle">Wrist angle</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
    <string name="jiggle">Jiggle</string>
    <string name="count_valid">Effect</string>
    <string name="cpr_accuracy">CPR Accuracy</string>
    <string name="ventilation_volume">Volume</string>
    <string name="average_volume">Average</string>
    <string name="depth_average_dialog">Depth Average</string>
    <string name="bpm_average_dialog">BPM Average</string>
    <string name="personal_setting">Personal Setting</string>
    <string name="company_setting">Company Setting</string>
    <string name="activate_aio">Its activated, if you use AIO</string>
    <string name="band_aio">Band, AIO</string>
    <string name="only_aio">Only AIO</string>
    <string name="manual">Manual</string>
    <!-- Ble scan error messages -->
    <string name="error_bluetooth_not_available">Bluetooth is not available</string>
    <string name="error_bluetooth_disabled">Enable bluetooth and try again</string>
    <string name="error_location_permission_missing">On Android 6.0 location permission is required. Please enable it in phone settings</string>
    <string name="error_location_services_disabled">Location services need to be enabled on Android 6.0</string>
    <string name="error_scan_failed_already_started">Scan with the same filters is already started</string>
    <string name="error_scan_failed_application_registration_failed">Failed to register application for bluetooth scan</string>
    <string name="error_scan_failed_feature_unsupported">Scan with specified parameters is not supported</string>
    <string name="error_scan_failed_internal_error">Scan failed due to internal error</string>
    <string name="error_scan_failed_out_of_hardware_resources">Scan cannot start due to limited hardware resources</string>
    <string name="error_undocumented_scan_throttle">Android 7+ does not allow more scans.</string>
    <string name="error_undocumented_scan_throttle_retry">Try in %d seconds</string>
    <string name="error_bluetooth_cannot_start">Unable to start scanning</string>
    <string name="error_unknown_error">Unknown error</string>
    <string name="input_message_here">Input Message here</string>
    <string name="disconnect_device">Disconnect the device.</string>
    <string name="running">Running...</string>
    <string name="alreadyinroom">\" is already in room\"</string>
    <string name="inputname">Input Name</string>
    <string name="one_person">1Person</string>
    <string name="two_people">2People</string>
    <string name="aio">Calibration</string>
    <string name="magnet_confirm">Magnet Position</string>
    <string name="exit">Exit</string>
</resources>
