<?xml version="1.0" encoding="utf-8"?>
<soup.neumorphism.NeumorphCardView android:id="@+id/info_ventilationCardView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    app:neumorph_backgroundColor="#292929"
    app:neumorph_shadowColorDark="@color/design_dark_default_color_shadow_dark"
    app:neumorph_shadowColorLight="#444444"
    app:neumorph_shadowElevation="1.5dp"
    app:neumorph_shapeType="flat"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ventilationTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:gravity="left"
            android:text="@string/ventilation"
            android:textColor="#ffffff"
            android:textSize="9dp"
            android:maxLines="1"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="6dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/volumeTextView"
                android:gravity="center"
                android:textSize="9dp"
                android:layout_weight="1"
                android:textColor="#ffffff"
                android:text="@string/ventilation_volume"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/sandolgothic"/>

            <TextView
                android:gravity="center"
                android:layout_weight="1"
                android:id="@+id/ventil_volume"
                android:text="-"
                android:textColor="#ffffff"
                android:textSize="9dp"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/sandolgothic"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="6dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ventilcountTextView"
                android:gravity="center"
                android:textSize="9dp"
                android:layout_weight="1"
                android:textColor="#ffffff"
                android:text="@string/count"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/sandolgothic"/>

            <TextView
                android:gravity="center"
                android:layout_weight="1"
                android:id="@+id/ventil_count"
                android:text="-"
                android:textColor="#ffffff"
                android:textSize="9dp"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/sandolgothic"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="6dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/avevolumeTextView"
                android:gravity="center"
                android:textSize="9dp"
                android:layout_weight="1"
                android:textColor="#ffffff"
                android:text="@string/average_volume"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/sandolgothic"/>

            <TextView
                android:gravity="center"
                android:layout_weight="1"
                android:id="@+id/ave_volume"
                android:text="-"
                android:textColor="#ffffff"
                android:textSize="9dp"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/sandolgothic"/>
        </LinearLayout>
    </LinearLayout>
</soup.neumorphism.NeumorphCardView>
