<?xml version="1.0" encoding="utf-8"?>
<soup.neumorphism.NeumorphCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/info_cprCardView"
    android:layout_width="268dp"
    android:layout_height="256dp"
    android:padding="2dp"
    app:neumorph_inset="1dp"
    app:neumorph_backgroundColor="#292929"
    app:neumorph_shadowColorDark="@color/design_dark_default_color_shadow_dark"
    app:neumorph_shadowColorLight="#444444"
    app:neumorph_shadowElevation="3dp"
    app:neumorph_shapeType="flat"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"/>

            <TextView
                android:id="@+id/cprTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/cpr_accuracy"
                android:layout_weight="2"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="#ffffff"
                android:autoSizeTextType="uniform"
                android:autoSizeMinTextSize="5sp"
                android:autoSizeMaxTextSize="45sp"
                android:maxLines="1"
                android:textStyle="bold"
                android:fontFamily="@font/sandolgothic"/>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1"/>

            <TextView
                android:id="@+id/all_accuracy"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:fontFamily="@font/sandolgothic"
                android:text="100%"
                android:maxLines="1"
                android:textColor="#49c644"
                android:autoSizeTextType="uniform"
                android:autoSizeMinTextSize="5sp"
                android:autoSizeMaxTextSize="45sp"
                android:textStyle="bold" />
            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:layout_weight="4"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:layout_gravity="center"
                android:gravity="start"
                android:orientation="horizontal">
                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"/>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:scaleType="fitCenter"
                    android:src="@drawable/score_03" />
                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"/>
                <TextView
                    android:id="@+id/depth_accuracy"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="match_parent"
                    android:gravity="start|center"
                    android:autoSizeMaxTextSize="45sp"
                    android:autoSizeMinTextSize="15sp"
                    android:autoSizeTextType="uniform"
                    android:maxLines="1"
                    android:text="@string/depth_accuracy_dialog"
                    android:textColor="#ffffff"
                    android:fontFamily="@font/sandolgothic"/>
                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"/>
            </LinearLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="left">
                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"/>
                <ImageView
                    android:id="@+id/depth_average_img"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:scaleType="fitCenter"
                    android:scaleX="1.7"
                    android:scaleY="1.7"
                    android:src="@drawable/score_04"
                    android:translationY="2dp" />
                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="start|center"
                    android:autoSizeMaxTextSize="45sp"
                    android:autoSizeMinTextSize="15sp"
                    android:autoSizeTextType="uniform"
                    android:fontFamily="@font/sandolgothic"
                    android:textColor="#ffffff"
                    android:id="@+id/ave_depth"
                    android:text="@string/depth_average_dialog"/>
                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"/>
            </LinearLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:gravity="start"
                android:orientation="horizontal">
                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"/>
                <ImageView
                    android:id="@+id/depth_bpm_img"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:scaleType="fitCenter"
                    android:scaleX="1.2"
                    android:scaleY="1.2"
                    android:src="@drawable/score_05" />
                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"/>
                <TextView
                    android:id="@+id/report_bpm"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="start|center"
                    android:text="@string/bpm_average_dialog"
                    android:fontFamily="@font/sandolgothic"
                    android:autoSizeMaxTextSize="45sp"
                    android:autoSizeMinTextSize="15sp"
                    android:autoSizeTextType="uniform"
                    android:maxLines="1"
                    android:textColor="#ffffff" />
                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"/>
            </LinearLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</soup.neumorphism.NeumorphCardView>

